blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # pod的数量
  selector: # 识别template中的命名，做绑定
    matchLabels:
      app: client
  template: #命名
    metadata:
      labels:
        app: client
    spec: # pod的配置
      containers:
        - name: client
          image: ricardo0816/client # default = latest

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP # 默认值 不需要写出
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
